# admin-tasks

./: .gitmodules  CMakeLists.txt  README.md  admin-tasks-copy.ini  admin-tasks.ini
doc/: admin-tasks.ini  copy-past-helper.txt  to-do.txt
include/: admin-tasks.hpp  copy-files-to-multiple-dirs.hpp  copy-full-license-text-file.hpp  delete-files-from-multiple-dirs.hpp  exception-handling-console.hpp  general.hpp  logs-support.hpp  prefix-suffix.hpp  tag-management.hpp  unpack-archives-in-subfolders.hpp
src/: admin-tasks.cpp  copy-files-to-multiple-dirs.cpp  copy-full-license-text-file.cpp  delete-files-from-multiple-dirs.cpp  exception-handling-console.cpp  general.cpp  logs-support.cpp  prefix-suffix.cpp  tag-management.cpp  unpack-archives-in-subfolders.cpp
